--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "hardhat": "^2.12.2"
+    "hardhat": "^2.12.2",
+    "hardhat-tracer": "^1.1.1"
   },
   "devDependencies": {
     "@ethersproject/abi": "^5.4.7",
